2006-11-07 Tim
 PATCH: [ 1592234 ] Manual: Nicer Shortcut keys tables
  Manual: Shortcut_keys.xml
  Manual/css: all.css help.css print.css

2006-11-06 Tim
 PATCH: [ 1586878 ] Manual: Replace "aborted.png" with transpatent GIF version
  Manual: Compare_dirs.xml
  Manual/screenshots: binary.gif folderup.gif folderup_disable.gif
  Manual/screenshots new file: aborted.gif
  Manual/screenshots deleted file: aborted.png

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Manual/screenshots: equal.gif fileskip.gif foldercomp1.png
    lfile.gif notequal.gif rfile.gif

2006-10-30 Tim
 PATCH: [ 1586867 ] Manual: Replace "example1.gif" with new PNG version
  Manual/screenshots new file: missing_lines.png
  Manual/screenshots deleted file: example1.gif
 Remove unnecessary image "unknown.gif".
  Manual/screenshots deleted file: unknown.gif

2006-10-19 Kimmo
 PATCH: [ 1578456 ] Manual: Small tweaks for installing doc
  Manual: Install.xml

2006-10-11 Kimmo
 PATCH: [ 1574644 ] Manual: Fix cvs id-line in filters-doc
  Manual: Filters.xml

2006-10-10 Kimmo
 PATCH: [ 1573933 ] Manual: Update introduction chapter
  Manual: Introduction.xml
 PATCH: [ 1573938 ] Manual: Update whatsnew for 2.6 release
  Manual: Whatsnew.xml
 Fix invalid links in Introduction, added in patch #1573933
  Manual: Introduction.xml

2006-10-07 Tim
 BUG: [ 1572388 ] Wrong link to regex.pdf
  Manual: Filters.xml

2006-10-03 Kimmo
 PATCH: [ 1569389 ] Manual: fix translations part
  Manual: Locales.xml
 PATCH: [ 1569400 ] Manual: Update About Doc chapter
  Manual: About_Doc.xml

2006-10-02 Tim
 PATCH: [ 1568943 ] Manual: Shows error for wrong "withads" argument
  Manual/build: build_html.bat
 PATCH: [ 1568945 ] Manual: Use <simpara> for all list items in Whatsnew
  Manual: WinMerge_help.xml
  Manual renamed file: Whatsnew_2_1.xml to Whatsnew.xml
 BUG: [ 1568946 ] Manual: Wrong link in "Install.xml"
  Manual: Install.xml

2006-09-29 Kimmo