@@ -43,6 +43,11 @@ pre,code,tt {
   border: 1px solid red;
 }
 
+/* FAQ */
+.question {
+  font-weight: bold;
+}
+
 /* tables */
 .table table {
   border-collapse: collapse;
