@@ -50,6 +50,11 @@ pre,code,tt {
   border: 1px solid black;
 }
 
+/* FAQ */
+.question {
+  font-weight: bold;
+}
+
 /* tables */
 .table table {
   border-collapse: collapse;
